--- a/src/styles/init.scss
+++ b/src/styles/init.scss
@@ -15,7 +15,7 @@ main {
   display: flex;
   flex-direction: column;
   background: var(--bg-color);
-  gap: 40px
+  gap: 56px
 }
 
 section {
